Add authentication to application

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,11 +40,13 @@ body {
  	background: white;
  	#logo {
  		float: left;
- 		p {
+ 		a {
  			text-transform: uppercase;
  			font-weight: 700;
  			letter-spacing: -1px;
  			font-size: 1.2rem;
+ 			text-decoration: none;
+ 			color: #397CAC;
  		}
  	}
  	#buttons {
@@ -70,7 +72,7 @@ body {
  		border-bottom: 1px solid #D1d1d1;
  		.title {
  			margin: 0;
- 			a {
+ 			p {
  				color: #397CAC;
  				text-decoration: none;
  				font-weight: 100;
